# KitchenClock

./: CMakeLists.txt  README.md  main.c
avr/: CMakeLists.txt  README.md  kitchecclock.sublime-workspace  main.c
avr/ssd1306xled/: font3x7.h  font5x7.h  ssd1306xled.h
avr/ssd1306xled/print_10x14/: print_10x14.h
avr/ssd1306xled/print_3x7/: CMakeLists.txt  print_3x7.c  print_3x7.h
avr/ssd1306xled/print_6x14/: print_6x14.h
i2c_bitbang/: CMakeLists.txt  i2c_bitbang.c  i2c_bitbang.h
kicad/: kichenclock-cache.lib  kichenclock.kicad_pcb  kichenclock.sch
num2str/: CMakeLists.txt  num2str.c  num2str.h
ssd1306xled/: CMakeLists.txt  ssd1306xled.c
ssd1306xled/print_10x14/: CMakeLists.txt  print_10x14.c
ssd1306xled/print_5x7/: CMakeLists.txt  print_5x7.c  print_5x7.h
ssd1306xled/print_6x14/: CMakeLists.txt  print_6x14.c
